# Fake_News_Data_Cup

./: .gitignore  0.Ideas.ipynb  1.DataProfilingandParsing.ipynb  2.DataPreparation.ipynb  3.ModelDevelopment.ipynb  4.ModelTesting.ipynb  Pipfile  README.md  Untitled.ipynb  Untitled1.ipynb  enriched_data_profile.html  fakenews.ipynb  mycache.pkl  pyproject.toml  sampleSentimentAnalysis.ipynb  slack_demo.ipynb  storage.h5  train_dataframe.pkl
.ipynb_checkpoints/: 0.Ideas-checkpoint.ipynb  1.DataProfilingandParsing-checkpoint.ipynb  2.DataPreparation-checkpoint.ipynb  3.ModelDevelopment-checkpoint.ipynb
data_profiles/: 20191111_feature_profile.html  data_profile_2.html  enriched_article_data_profile.html  training_data_profile.html
examples/: slack_demo.ipynb
local_modules/: DataPreparation.py  Logging.py  ModelDevelopment.py  Pickling.py  slack.py
local_modules/hunga_bunga/: __init__.py  classification.py  regression.py  universal_params.py  utilities.py
local_modules/scoring/: score.py
submission/: Dockerfile  buildDocker.sh  sample_submission.py
test/: NewsAI.ipynb  example.parquet  testing_hdfstore.ipynb  testing_parquet.ipynb
test/.ipynb_checkpoints/: NewsAI-checkpoint.ipynb
tf_keras_local/: 3.a.neural_network_model.ipynb
