[tool.poetry]
name = "fake_news_data_cup"
version = "0.1.0"
description = ""
authors = ["brian King <kingbd2@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17"
pandas = "^0.25.2"
matplotlib = "^3.1"
jupyterlab = "^1.1"
scikit-learn = "^0.21.3"
seaborn = "^0.9.0"
nltk = "^3.4"
ipykernel = "^5.1"
pylint = "^2.4"
autopep8 = "^1.4"
requests = "^2.22"
ipycache = {git = "https://github.com/rossant/ipycache.git"}
[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "19.3b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
